<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
    	<groupId>org.jeesl</groupId>
    	<artifactId>jeesl</artifactId>
    	<version>0.3.2-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
	</parent>
	
    <artifactId>jeesl-test</artifactId>
    <packaging>jar</packaging>
    <name>JEESL - Test</name>

	<dependencyManagement>
		<dependencies>      	         
			<dependency>
				<groupId>org.jeesl.bom</groupId>
				<artifactId>bom-core</artifactId>
				<version>${maven.version.jeesl.bom}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
        
		<dependency>
			<groupId>net.sf.exlp</groupId>
			<artifactId>exlp-util</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>provided</scope>
		</dependency>
		
		<!-- Logging -->
	 	<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j2-impl</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<scope>test</scope>
		</dependency>
		
		<!-- Test -->


	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<inherited>true</inherited>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration><rulesUri>${maven.ignore.versions}</rulesUri></configuration>
			</plugin>
		</plugins>
	</build>

</project>